Fix menu spacing

--- a/components/header/header.module.css
+++ b/components/header/header.module.css
@@ -38,6 +38,7 @@
 
 .menu {
 	position: fixed;
+	top: 0;
 	width: 100vw;
 	height: 100vh;
 	background: rgba(0, 0, 0, 0.5);
